<resources>
    <string name="app_name">RDT Smart Reader</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="informations">Informations</string>
    <string name="parametres">Paramètres</string>
    <string name="ajouter_un_patient">Ajouter un patient</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="test_invalide">Test Invalide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attribuer">Attribuer</string>
    <string name="refuser">Refuser</string>
    <string name="camera_permission_explanation">Nous avons besoin de cette permission pour pouvoir prendre les photos</string>
    <string name="erreur">Erreur</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="localisation_preference_key">localisation</string>
    <string name="identifiants">Identifiants</string>
    <string name="besoin_permission">Besoin de Permission</string>
    <string name="autoriser">Autoriser</string>
    <string name="permission_message_for_localisation">Nous avons besoin de cette permission pour accéder à votre localisation</string>
    <string name="ok">OK</string>
    <string name="genre">Genre</string>
    <string name="masculin">M</string>
    <string name="feminin">F</string>
    <string name="ville">Ville</string>
    <string name="aire_de_sante">Aire de Santé</string>
    <string name="district">District</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="professionnel_de_la_sante">Professionnel de la Santé</string>
    <string name="date_deces">Date décès</string>
    <string name="domicile">Domicile</string>
    <string name="profession">Profession</string>
    <string name="noms_et_prenoms">Noms et Prénoms</string>
    <string name="statut_du_cas">Statut du cas</string>
    <string name="decede">Décédé</string>
    <string name="vivant">Vivant</string>
    <string name="precedent">Précédent</string>
    <string name="asymptomatique">La patient a t\'il des symptomes?</string>
    <string name="date_debut_symptome">Date début symptome</string>
    <string name="nsp">NSP</string>
    <string name="informations_personnelles">Informations Personnelles</string>
    <string name="details_infos_personnelles">compléter ce formulaire pour ajouter un patient</string>
    <string name="suivant">Suivant</string>
    <string name="age">Age</string>
    <string name="telephone">Téléphone</string>
    <string name="nature_du_test">Nature du Test</string>
    <string name="type_de_prelevement">Type de prévèlement</string>
    <string name="nasopharynge">Nasopharyngé</string>
    <string name="autres">Autres</string>
    <string name="indications_du_prelevement">Indications du prélèvement</string>
    <string name="volontaire">Volontaire</string>
    <string name="controle">Controle</string>
    <string name="resultats">Résultats</string>
    <string name="presence_de_sars_cov_ag">Présence de SARS Cov Ag</string>
    <string name="absence_de_sars_cov_ag">Absence de SARS Cov Ag</string>
    <string name="indetermine">Indéterminé</string>
    <string name="conclusion">Conclusion</string>
    <string name="positif">Positif</string>
    <string name="negatif">Négatif</string>
    <string name="positifs">Positifs</string>
    <string name="negatifs">Négatifs</string>
    <string name="annuler">Annuler</string>
    <string name="veuillez_bien_remplir_cette_page">Veuillez bien remplir cette page</string>
    <string name="symptome_cas">Symtomes du cas</string>
    <string name="informations_test">Informations sur le test</string>
    <string name="autre_nature_prelevement">Autre Nature prélèvement</string>
    <string name="autre_indication_prelevement">Autre Indication prélèvement</string>
    <string name="autre">Autre</string>
    <string name="nom_manipulateur">Nom Manipulateur</string>
    <string name="telephone_manipulateur">Téléphone Manipulateur</string>
    <string name="synchroniser">Synchroniser</string>
    <string name="cas">Cas</string>
    <string name="non_synchronisees">Non Synchronisées</string>
    <string name="synchronisees">Synchronisées</string>
    <string name="testes">Testés</string>
    <string name="poste">Poste</string>
    <string name="region">Region</string>
    <string name="mois">Mois</string>
    <string name="annee">Année</string>
    <string name="resultats_covid19_ac">Resultats COVID19 Ac</string>
    <string name="resultats_covid19_ag">Resultats COVID19 Ag</string>
    <string name="resultats_igc">Résultats Igc</string>
    <string name="resultats_igm">Résultats IgM</string>
    <string name="synchronise">Synchronisé</string>
    <string name="non_synchronise">Non Synchronisé</string>
    <string name="tous_les_cas">Tous les cas</string>
    <string name="transition_name_card_to_informations">card_home_to_informations</string>
    <string name="file_provider_authority">com.example.android.fileprovider</string>
    <string name="nom_de_la_page">Nom de la page</string>
    <string name="description_de_la_page">Description de la page</string>
    <string name="details_de_la_page">Details de la page</string>
    <string name="ajouter_une_question">Ajouter une question</string>
    <string name="supprimer">Supprimer</string>
    <string name="required">Required</string>
    <string name="hint_required_question">Permet de savoir si cette question est oblligatoire ou pas</string>
    <string name="description_de_la_question">Description de la question</string>
    <string name="nom_du_formulaire">Nom du formulaire</string>
    <string name="Camera">Caméra</string>
</resources>