<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_menu_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/informationsFragment"
        android:icon="@drawable/informations_menu_icon"
        android:title="@string/informations" />

    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/camera_menu_icon"
        android:title="@string/Camera" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_menu_icon"
        android:title="@string/parametres"
        android:visible="false"/>

    <item android:id="@+id/userProfilFragment"
        android:icon="@drawable/profil_menu_icon"
        android:title="Mon Profil"/>

</menu>