<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.informations.InformationsFragment"
        android:transitionName="@string/transition_name_card_to_informations">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|snap">

                <LinearLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:elevation="4dp">

                    <ImageButton
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_round_arrow_back_24"
                        android:layout_marginStart="@dimen/semi_fab_margin"
                        android:background="@drawable/button_round_background"
                        android:tint="?android:attr/colorForeground"
                        android:padding="@dimen/semi_fab_margin"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/informations"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_marginStart="@dimen/semi_fab_margin"
                        android:layout_marginEnd="@dimen/semi_fab_margin"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_round_filter_list_24"
                        android:visibility="gone"
                        android:background="@drawable/button_round_background"
                        android:tint="?android:attr/colorForeground"
                        android:padding="@dimen/semi_fab_margin"
                        android:layout_marginEnd="@dimen/semi_fab_margin"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_all_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:backgroundTint="#3300838F"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/semi_fab_margin"
                    android:layout_marginStart="@dimen/semi_fab_margin"
                    android:layout_marginEnd="@dimen/semi_fab_margin"
                    android:background="@drawable/background_type_of_data"
                    android:paddingStart="@dimen/fab_margin"
                    android:paddingEnd="@dimen/fab_margin"
                    android:paddingTop="@dimen/semi_fab_margin"
                    android:paddingBottom="@dimen/semi_fab_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_round_people_alt_24"
                        android:layout_marginEnd="@dimen/semi_fab_margin"
                        app:tint="?android:attr/colorForeground"/>

                    <TextView
                        android:id="@+id/textview_nombre_personnes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tous_les_cas"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout_all_sync_users"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:backgroundTint="#4043A047"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/semi_fab_margin"
                        android:layout_marginStart="@dimen/semi_fab_margin"
                        android:layout_marginEnd="@dimen/semi_fab_margin"
                        android:background="@drawable/background_type_of_data"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:paddingTop="@dimen/semi_fab_margin"
                        android:paddingBottom="@dimen/semi_fab_margin">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_round_sync_24"
                            android:layout_marginEnd="@dimen/semi_fab_margin"
                            app:tint="?android:attr/colorForeground"/>

                        <TextView
                            android:id="@+id/text_number_synched_users"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/synchronisees"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_all_not_sync_users"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:backgroundTint="#40E53935"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/quater_fab_margin"
                        android:layout_marginStart="@dimen/semi_fab_margin"
                        android:layout_marginEnd="@dimen/semi_fab_margin"
                        android:background="@drawable/background_type_of_data"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:paddingTop="@dimen/semi_fab_margin"
                        android:paddingBottom="@dimen/semi_fab_margin">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_round_sync_problem_24"
                            android:layout_marginEnd="@dimen/semi_fab_margin"
                            app:tint="?android:attr/colorForeground"/>

                        <TextView
                            android:id="@+id/text_number_not_synched_users"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/non_synchronisees"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout_all_negatifs_users"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:backgroundTint="#4043A047"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/semi_fab_margin"
                        android:layout_marginStart="@dimen/semi_fab_margin"
                        android:layout_marginEnd="@dimen/semi_fab_margin"
                        android:background="@drawable/background_type_of_data"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:paddingTop="@dimen/semi_fab_margin"
                        android:paddingBottom="@dimen/semi_fab_margin">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_round_insert_emoticon_24"
                            android:layout_marginEnd="@dimen/semi_fab_margin"
                            app:tint="?android:attr/colorForeground"/>

                        <TextView
                            android:id="@+id/text_number_negatifs_users"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/negatifs"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_all_positifs_users"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:backgroundTint="#40E53935"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/quater_fab_margin"
                        android:layout_marginStart="@dimen/semi_fab_margin"
                        android:layout_marginEnd="@dimen/semi_fab_margin"
                        android:background="@drawable/background_type_of_data"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:paddingTop="@dimen/semi_fab_margin"
                        android:paddingBottom="@dimen/semi_fab_margin">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_round_sick_emoticon_24"
                            android:layout_marginEnd="@dimen/semi_fab_margin"
                            app:tint="?android:attr/colorForeground"/>

                        <TextView
                            android:id="@+id/text_number_positifs_users"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/positifs"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_synchronise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synchroniser"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_margin="@dimen/fab_margin"/>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_list_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_add_24"
            app:borderWidth="0dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>